<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.currency.CurrencyFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:id="@+id/remoteWrapper"
        app:cardCornerRadius="25dp"
        android:layout_margin="25dp"
        app:cardBackgroundColor="@color/currencyRemote"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:text="@string/remote_data"/>

        <TextView
            android:id="@+id/remoteDate"
            android:layout_gravity="center_horizontal"
            tools:text="18.12.2023"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
        <TextView
            android:id="@+id/remoteValute"
            android:text="@string/usd"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:id="@+id/pb_remote"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/remoteValue"
            tools:text="76.27"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/localWrapper"
        app:cardCornerRadius="25dp"
        android:layout_margin="25dp"
        app:cardBackgroundColor="@color/currencyLocal"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/remoteWrapper"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:text="@string/local_data"/>
        <TextView
            android:id="@+id/localDate"
            android:layout_gravity="center_horizontal"
            tools:text="18.12.2023"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ProgressBar
            android:id="@+id/pb_local"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/localValute"
            android:text="@string/usd"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/localValue"
            tools:text="76.27"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/lastSign"
        app:layout_constraintTop_toBottomOf="@id/localWrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/last_sign"
        android:textSize="19sp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toTopOf="@id/btn_getCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/lastSignText"
        app:layout_constraintTop_toBottomOf="@id/localWrapper"
        app:layout_constraintLeft_toRightOf="@id/lastSign"
        android:textSize="19sp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toTopOf="@id/btn_getCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_getCurrency"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/update"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/localWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
    android:id="@+id/nextFragment"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:text="@string/open_map"
    android:textSize="20sp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_getCurrency"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>





</androidx.constraintlayout.widget.ConstraintLayout>